add- new endpoint/functionality getVehiclesUser
